--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
 asgiref==3.2.10
-certifi==2019.9.11
+certifi==2020.6.20
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==1.8.9
 django-heroku==0.3.1
 gunicorn==20.0.4
 idna==2.10
-pipenv==2018.11.26
+pkg-resources==0.0.0
 psycopg2==2.8.5
 pytz==2020.1
 requests==2.24.0
 sqlparse==0.3.1
 urllib3==1.25.9
-virtualenv==16.7.7
-virtualenv-clone==0.5.3
 whitenoise==5.1.0
