--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 dj-database-url==0.5.0
 Django==1.8.9
 django-heroku==0.3.1
+facebook-sdk==3.1.0
 gunicorn==20.0.4
 idna==2.10
 psycopg2==2.8.5
